# sqlean

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  SyncFork.sh
src/: sqlite3-sqlean.c
src/fileio/: legacy.c
src/patches/: windirent_no_filter.patch
src/time/: duration.c  time.c
